# dcm-schememo

./: .coveragerc  .gitignore  README.ja.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  test.yml
examples/: README.md  google_keep.py  pyproject.toml  test_event.vcs
tests/: test_vcs_parser.py
